fix wrapping nav buttons

--- a/cc/css/style.css
+++ b/cc/css/style.css
@@ -528,6 +528,8 @@ div:not(.chartjs-size-monitor).hidden:not(.forceShow) {
   font-size: 2.3em;
   line-height: var(--topNav-height);
   /* margin: 0 0 .5em 0; */
+  max-width: 40vw;
+  overflow: hidden;
 }
 
 body {
